Adjustment to make work swaggerUI with guardian
